--- a/byYourHand/src/app/app.component.html
+++ b/byYourHand/src/app/app.component.html
@@ -1,1 +1,7 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 <router-outlet></router-outlet>
+<footer class="row">    
+    <a class="col-6" href="http://media.tojicode.com/q3bsp/">Here's an example of how it could be 3D</a>
+    <a class="col-6" href="https://blog.tojicode.com/2010/06/quake-2-bsp-quite-possibly-worst-format.html">As covered here</a>
+</footer>
