level design to put an enemy in the way for collision POC

--- a/byYourHand/src/app/routes/roam/level/level.component.html
+++ b/byYourHand/src/app/routes/roam/level/level.component.html
@@ -1,2 +1,4 @@
-<hr class="floor levelObject">
+<hr class="floor levelObject" style="top:128px;left:64px;width:64px;">
+<hr class="floor levelObject" style="top:192px;left:192px;width:128px;">
+
 <div class="enemy levelObject"></div>
