--- a/byYourHand/src/app/routes/roam/level/level.component.css
+++ b/byYourHand/src/app/routes/roam/level/level.component.css
@@ -7,10 +7,5 @@
 }
 
 .enemy {
-    top:96px;
-    left:160px;
-    width:32px;
-    height:32px;
-    background-color:blue;
-    border: 2px solid blue;
+    background-color:red;
 }
