create a level boundary, which will bind to the game box next. Tie that boundary into navigation so player can only scroll within the game screen

--- a/byYourHand/src/app/routes/roam/level/level.component.css
+++ b/byYourHand/src/app/routes/roam/level/level.component.css
@@ -13,3 +13,11 @@
 .player {
     background-color: green;
 }
+
+.gameBorder {
+    position:absolute; 
+    left:32px;
+    border: 2px solid blue;
+    width: 1024px;
+    height: 640px;
+}
