#5 small change to add debug for lives/health

--- a/byYourHand/src/app/routes/roam/level/level.component.html
+++ b/byYourHand/src/app/routes/roam/level/level.component.html
@@ -4,6 +4,6 @@
 
 <div style="float: right;">
     <p>Direction: {{directionDebug}}</p>
-    <p><b>Player on floor: {{playerOnFloorDebug}}</b></p>
+    <p>Player lives: {{playerLivesDebug}}, Player health: {{playerHealthDebug}}</p>
     <p>Player floor status: {{playerFloorStatusDebug}}</p>
 </div>
